Fixed modules and added more module commands